--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,9 @@ body { margin: 0; }
 .header nav a:hover {
 	color: #1B579E;
 }
+.header nav a.active {
+	color: #1B579E;
+}
 
 .home-hero {
 	width: calc(100% - 40px);
@@ -42,7 +45,7 @@ body { margin: 0; }
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	column-gap: 30px;
+	gap: 30px;
 }
 .home-hero .profile {
 	width: 200px;
@@ -82,7 +85,7 @@ body { margin: 0; }
 .home-hero .social {
 	display: flex;
 	flex-direction: row;
-	column-gap: 10px;
+	gap: 10px;
 	margin: 10px 0 0 0;
 }
 .home-hero .social a {
@@ -90,6 +93,16 @@ body { margin: 0; }
 }
 .home-hero .social a:hover {
 	transform: scale(0.9);
+}
+@media only screen and (max-width: 600px) {
+	.home-hero {
+		flex-direction: column-reverse;
+		gap: 50px;
+		text-align: center;
+	}
+	.home-hero .social {
+		justify-content: center;
+	}
 }
 
 .page-header {
