--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,14 @@
 body { margin: 0; }
 
 .header {
-	height: 90px;
+	height: 70px;
 	position: sticky;
+	top: 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	box-shadow: 0 10px 20px rgba(0,0,0,0.05), 0 1px 1px rgba(0,0,0,0.05);
+	background: #fff;
 }
 .header .container {
 	width: calc(100% - 40px);
@@ -36,6 +38,7 @@ body { margin: 0; }
 }
 .header nav a.active {
 	color: #1B579E;
+	font-weight: 600;
 }
 
 .home-hero {
@@ -52,6 +55,11 @@ body { margin: 0; }
 	height: 200px;
 	border-radius: 50%;
 	box-shadow: 0 0 0 5px #fff, 0 10px 20px rgba(0,0,0,0.2);
+	transition: 300ms all ease;
+}
+.home-hero .profile:hover {
+	transform: scale(1.05) translateY(-10px);
+	box-shadow: 0 0 0 8px #fff, 0 10px 20px rgba(0,0,0,0.2);
 }
 .home-hero .container {
 	display: flex;
@@ -104,13 +112,30 @@ body { margin: 0; }
 		justify-content: center;
 	}
 }
-
 .page-header {
-	font-size: 42px;
-	font-weight: 700;
+	width: calc(100% - 40px);
+	max-width: 400px;
 	text-align: center;
+	margin: 50px auto 40px;
+}
+.page-header .icon {
+	margin: 0 0 20px 0;
+	font-size: 36px;
+	text-align: center;
+}
+.page-header h1 {
+	font-size: 36px;
+	font-weight: 700;
 	padding: 0 30px;
-	margin: 80px 0 50px;
+	margin: 0;
+	color: #000;
+}
+.page-header h2 {
+	font-size: 16px;
+	font-weight: 400;
+	padding: 0 30px;
+	margin: 20px 0 0;
+	color: #444;
 }
 
 .main-footer {
@@ -127,4 +152,97 @@ body { margin: 0; }
 }
 .main-footer a:hover {
 	color: #000;
+}
+
+.loading {
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	opacity: 0;
+	visibility: hidden;
+	background: rgba(255, 255, 255, 0.8);
+	z-index: 10;
+	transition: 300ms all ease;
+}
+.loading.active {
+	opacity: 1;
+	visibility: visible;
+}
+
+.contact {
+	width: calc(100% - 40px);
+	max-width: 400px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+	align-items: center;
+}
+.contact .row {
+	width: 100%;
+}
+.contact label {
+	margin-bottom: 10px;
+	display: inline-block;
+	cursor: pointer;
+}
+.contact input[type=text] {
+	height: 40px;
+	padding: 0 15px;
+}
+.contact textarea {
+	width: 100%;
+	height: 100px;
+	padding: 15px;
+	resize: vertical;
+}
+.contact input[type=text],
+.contact textarea {
+	width: 100%;
+	border-radius: 8px;
+	outline: none;
+	border: 0;
+	box-shadow: 0 0 0 1px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.1);
+	transition: 200ms box-shadow ease;
+}
+.contact input[type=text]:hover,
+.contact textarea:hover {
+	box-shadow: 0 0 0 1px rgba(0,0,0,0.15), 0 2px 8px rgba(0,0,0,0.15);
+}
+.contact input[type=text]:focus,
+.contact textarea:focus {
+	box-shadow: 0 0 1px rgba(0,0,0,0.15), 0 2px 8px rgba(0,0,0,0.15), 0 0 0 2px #1B579E;
+}
+.contact .helper {
+	display: none;
+	margin: 10px 0 0;
+}
+.contact .helper.success {
+	color: rgb(26, 161, 60);
+}
+.contact .helper.error {
+	color: rgb(184, 29, 29);
+}
+.contact .helper.active {
+	display: block;
+}
+.contact button[type=submit] {
+	padding: 10px 16px;
+	background: #000;
+	color: #fff;
+	border-radius: 8px;
+	border: 0;
+	outline: 0;
+	font-size: 16px;
+	font-weight: 600;
+	cursor: pointer;
+	transition: 200ms all ease;
+}
+.contact button[type=submit]:hover {
+	transform: scale(1.05);
+}
+.contact button[type=submit]:focus {
+	transform: scale(0.95);
 }
