--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,18 +189,18 @@ body { margin: 0; }
 	cursor: pointer;
 }
 .contact input[type=text] {
+	width: calc(100% - 30px);
 	height: 40px;
 	padding: 0 15px;
 }
 .contact textarea {
-	width: 100%;
+	width: calc(100% - 30px);
 	height: 100px;
 	padding: 15px;
 	resize: vertical;
 }
 .contact input[type=text],
 .contact textarea {
-	width: 100%;
 	border-radius: 8px;
 	outline: none;
 	border: 0;
